--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
     <selenium.version>4.20.0</selenium.version>
     <cucumber.version>7.18.0</cucumber.version>
     <testng.version>7.10.0</testng.version>
+    <allure.version>2.25.0</allure.version>
+
     <webdrivermanager.version>5.6.2</webdrivermanager.version>
   </properties>
 
@@ -63,6 +65,12 @@
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
       <version>1.4.14</version>
+    </dependency>
+
+    <dependency>
+      <groupId>io.qameta.allure</groupId>
+      <artifactId>allure-testng</artifactId>
+      <version>${allure.version}</version>
     </dependency>
   </dependencies>
 
